--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# Maven
+target
 target/
 pom.xml.tag
 pom.xml.releaseBackup
@@ -9,3 +11,17 @@ buildNumber.properties
 .mvn/timing.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
+
+# Eclipse
+/.classpath
+/.project
+/.settings
+
+# Intellij
+.idea
+*.iml
+*.ipr
+
+
+# Jahia DX Studio
+repository.xml.generated
